z-index fixes

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h1{
   -webkit-text-fill-color: transparent;
   font-size: 60px;
   line-height: 60px;
+  z-index: 3;
 }
 
 .wrapper { 
